<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart_logo"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_backet"
            android:icon="@drawable/ic_baskcet_logo"
            android:title="@string/menu_you_order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_logo"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baskcet_logo"
            android:title="@string/menu_logout" />
    </group>
</menu>
