<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shoopyshop.ui.MainFragment"
        android:label=""
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.shoopyshop.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_backet"
        android:name="com.example.shoopyshop.ui.Order.OrderFragment"
        android:label="@string/menu_you_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.shoopyshop.ui.Profile.EditProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_editprofile" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shoopyshop.ui.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

</navigation>